# discrete-mirage

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
demo/: CMakeLists.txt
demo/RGFW/: RGFW.h
demo/mathc/: README.md  mathc.c  mathc.h  source-url.txt
demo/src/: demo_models.cpp  example_implementations.c  geometry_processing.cpp  helper_utils.cpp  main.cpp  math_utils.cpp  math_utils.hpp  voxel_data_processing.cpp
discrete_mirage/: CMakeLists.txt
discrete_mirage/include/: discrete_mirage.h
discrete_mirage/src/: discrete_mirage.c  render_ortho.c
docs/: notes.md
